adjust box color

--- a/cover.css
+++ b/cover.css
@@ -186,7 +186,7 @@ body {
 .vis-item {
     background-color: #485563;
     color: #ebebeb;
-    border-color: transparent;
+    border-color: #e98643;
 }
 
 
